# schemer

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yml
schemer/: CHANGELOG.md  Cargo.toml
schemer-postgres/: CHANGELOG.md  Cargo.toml
schemer-postgres/src/: lib.rs
schemer-rusqlite/: CHANGELOG.md  Cargo.toml
schemer-rusqlite/src/: lib.rs
schemer/src/: lib.rs  testing.rs
