[package]
name = "schemer-postgres"
version = "0.2.0"
edition = "2021"
rust-version = "1.59"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "PostgreSQL adapter for the Schemer database schema migration library"
readme = "../README.md"
keywords = ["database", "migration", "postgresql", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/aschampion/schemer"

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1" }

schemer = { version = "0.2", path = "../schemer" }
