[package]
name = "schemer-rusqlite"
version = "0.2.1"
edition = "2021"
rust-version = "1.56"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "SQLite3 adapter for the Schemer database schema migration library "
readme = "../README.md"
keywords = ["database", "migration", "sqlite", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/aschampion/schemer"

[dependencies]
uuid = { version = "1" }
rusqlite = "0.29.0"

schemer = { version = "0.2.1", path = "../schemer" }
