[package]
name = "schemer"
version = "0.1.1"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "A database schema migration library with DAG dependencies"
readme = "../README.md"
keywords = ["database", "migration", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/aschampion/schemer"

[badges]
travis-ci = { repository = "aschampion/schemer", branch = "master" }

[dependencies]
daggy = "~0.5"
failure = "~0.1"
failure_derive = "~0.1"
log = "0.4"
uuid = { version = "~0.5", features = ["use_std"] }
