[package]
name = "schemer"
version = "0.1.2"
edition = "2018"
rust-version = "1.56"
authors = [
    "Andrew Champion <andrew.champion@gmail.com>",
    "Tom Kazimiers <tom@voodoo-arts.net>",
    "Chris Barnes <barnesc@janelia.hhmi.org>",
]
description = "A database schema migration library with DAG dependencies"
readme = "../README.md"
keywords = ["database", "migration", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/aschampion/schemer"

[dependencies]
daggy = "0.6"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1" }
